@startuml

title __DOMAIN's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.AdminController {
          + AdminController()
          ~ delete()
          ~ findAll()
          ~ getById()
          ~ save()
          ~ update()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.CandidatoController {
          + CandidatoController()
          ~ delete()
          ~ findAll()
          ~ getById()
          ~ save()
          ~ update()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.EmpresaController {
          + EmpresaController()
          ~ delete()
          ~ findAll()
          ~ getById()
          ~ save()
          ~ update()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.domain {
      class com.soundlab.dockerizedjavaapi.controllers.domain.VagaController {
          + VagaController()
          ~ delete()
          ~ findAll()
          ~ getById()
          ~ save()
          ~ update()
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.controllers.domain.AdminController o-- com.soundlab.dockerizedjavaapi.services.domain.AdminService : adminService
  com.soundlab.dockerizedjavaapi.controllers.domain.CandidatoController o-- com.soundlab.dockerizedjavaapi.services.domain.CandidatoService : candidatoService
  com.soundlab.dockerizedjavaapi.controllers.domain.EmpresaController o-- com.soundlab.dockerizedjavaapi.services.domain.EmpresaService : empresaService
  com.soundlab.dockerizedjavaapi.controllers.domain.VagaController o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
